--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <div id="overlays"></div>
     <div id="root" class="bg-[#282828]"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
